# stereo-dso

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp
src/IOWrapper/: Output3DWrapper.h
src/IOWrapper/OpenCV/: DepthImageWrapper.cpp  DepthImageWrapper.h  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp
